--- a/electronapp/src/styles/scss/partials/_electronDashboard.scss
+++ b/electronapp/src/styles/scss/partials/_electronDashboard.scss
@@ -12,7 +12,10 @@
     .info {
       text-align: center;
       line-height: 1rem;
-      padding: 0rem 2rem;
+      padding: 0rem 1rem;
+      margin: 1rem;
+      border: 1px solid white;
+      border-radius: 4px;
     }
 
     .imageHeader {
