--- a/electronapp/public/styles/css/index.css
+++ b/electronapp/public/styles/css/index.css
@@ -234,6 +234,10 @@
   display: inline-flex;
   justify-content: space-between;
 }
+.new-stream .inputs-container .forms-container form .schedule-btn {
+  width: 10rem;
+  margin-left: 16px;
+}
 
 .start-scheduled {
   overflow: hidden;
