--- a/electronapp/src/styles/scss/partials/_scheduleNewStream.scss
+++ b/electronapp/src/styles/scss/partials/_scheduleNewStream.scss
@@ -12,6 +12,7 @@
     }
     
   }
+
   .inputs-container{
     display:flex; 
     justify-content: center;
@@ -31,6 +32,10 @@
         .bottom-container{
           display:inline-flex;
           justify-content: space-between;
+        }
+        .schedule-btn {
+          width: 10rem;
+          margin-left: 16px;
         }
       }
     }
