--- a/electronapp/public/styles/css/index.css
+++ b/electronapp/public/styles/css/index.css
@@ -11,6 +11,14 @@
   flex-direction: column;
   align-items: center;
 }
+.dashboard .streams .info {
+  text-align: center;
+  line-height: 1rem;
+  padding: 0rem 1rem;
+  margin: 1rem;
+  border: 1px solid white;
+  border-radius: 4px;
+}
 .dashboard .streams .imageHeader {
   width: 50px;
   height: 50px;
@@ -99,6 +107,104 @@
   box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
+.inputs-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.forms-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.title-input input {
+  margin-left: 1rem;
+}
+.title-input .grouping {
+  display: flex;
+  justify-content: space-around;
+  margin: 0rem 1rem;
+}
+
+.title-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.description-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-container .input-label-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.bottom-container .input-label-container .warning-label {
+  font-size: 0.7rem;
+  max-width: 300px;
+}
+.bottom-container .input-label-container input {
+  height: 1rem;
+  width: 300px;
+  margin: 1rem;
+}
+
+.youtube-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.b-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.launch-btn {
+  width: 5rem;
+  border-radius: 4px;
+  padding: 0.4rem;
+  margin-top: 1rem;
+  margin-left: 3rem;
+}
+
+.p {
+  margin-top: -1em;
+}
+
 .new-stream {
   color: #FFF;
 }
@@ -127,6 +233,10 @@
 .new-stream .inputs-container .forms-container form .bottom-container {
   display: inline-flex;
   justify-content: space-between;
+}
+.new-stream .inputs-container .forms-container form .schedule-btn {
+  width: 10rem;
+  margin-left: 16px;
 }
 
 .start-scheduled {
@@ -182,7 +292,7 @@
   min-width: 100vw;
   max-width: 100vw;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: center;
   height: 5rem;
   background-color: #000000;
@@ -191,15 +301,11 @@
   max-height: 3rem;
   margin: 0.5em;
 }
-.nav-container .nav-header .nav-links {
-  display: flex;
-  flex-direction: row;
-  margin-right: 3rem;
-}
-.nav-container .nav-header .nav-links .btn.nav-link {
+.nav-container .nav-header .btncc.nav-link {
   font-size: 0.7rem;
   color: #000;
-  max-width: 5rem;
+  max-width: 7rem;
+  justify-content: center;
 }
 
 html {
@@ -240,7 +346,7 @@ a {
   min-width: 100vw;
 }
 
-.btn {
+.btncc {
   background-color: #bbb;
   color: #000;
   text-decoration: none;
@@ -258,7 +364,7 @@ a {
   min-width: 6rem;
   max-height: 2rem;
 }
-.btn:hover {
+.btncc:hover {
   background-color: #777;
 }
 
