--- a/client/src/styles/scss/partials/_indexViews.scss
+++ b/client/src/styles/scss/partials/_indexViews.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     margin: 3rem;
+
+    p {
+      text-align: center;
+    }
   }
   .index-view {
     background-color: #777;
