quick fix for components container 2 raising vertically in safari

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -342,8 +342,7 @@
   .stream-parent .component-container2 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-areas: "Code Terminal";
-    max-height: 47.8vh; }
+    grid-template-areas: "Code Terminal"; }
     .stream-parent .component-container2 .Code-display {
       grid-column: span 6;
       position: relative;
